ChangeLog for the Astro project.

20200127:
	* add display of target point in processed image of StarTracker
	* add SAO star catalog
	* add flattening function to Horizon class
	* fix some bugs in the horizon parser
	* multiple bug fixes
	* add ServiceObjectPtr type

20200126:
	* add configuration documentation to the ICE interface
	* add config docu options to the snowconfig client
	* document all known configuration options

20200117:
	* make calibration faster by moving simultanously
	* add configuration keys for hot pixel detection and calibration
	* add README.starcatalogs
	* set default servicename equal to the hostname
	* add a default configuration database that already contains
	  the SIMULATOR instrumetn
	* add README files to all the directoryies needed for a running
	  installation
	* add user/group options. If astro/astro exist, they are used
	  otherwise the user running the config script is used
	* add options to automaically install systemd start script
	* addd ENABLE_SYSTEMD conditional
	* add getent script

20200116:
	* create an analysis image in the StarTracker
	* eliminate SimpleImage and replace by ImageBuffer
	* add hot pixel interpolation adapter
	* make calibration process more tolerant
	* fix StarTracker
	* add guide rates to the mount	
	* allow server to build guider using guide rates from mount
	* replace all occurencies of readdir by readdir_r for reentrancy

20200115:
	* always install device property files
	* add error messaging for devices.properties
	* add capability to read a property directory

20200113:
	* add Sun and Moon coordinate computation
	* add LuminanceFunction infrastructure to the adapter framework
	* add LuminanceMapping function to the processing system

20200105:
	* add missing psf.cpp tool
	* fix missing function in FourierImage.cpp

20200104:
	* add Pseudo, Wiener and constrained VanCittert deconvolution
	* add processing step for deconvolution

20200103:
	* improve the PeakFinder and the ConnectedComponent class